# AstroFast

./: .gitignore  AGENTS.md  README.md  build_portable.ps1  findings.json  pubspec.yaml
.desloppify/: config.json  plan.json  plan.json.bak  query.json  state-dart.json  state-dart.json.bak
.github/workflows/: android_nightly.yml  nightly.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
lib/: main.dart
lib/core/: app_environment.dart  ayanamsa_calculator.dart  chart_customization.dart  chart_share_service.dart  data_manager.dart  database_helper.dart  ephemeris_manager.dart  pdf_report_service.dart  rashiphal_rules.dart  responsive_helper.dart  saved_charts_helper.dart
lib/data/: city_database.dart  life_prediction_models.dart  models.dart  sample_charts.dart
lib/logic/: ashtakavarga.dart  bhava_bala.dart  chart_comparison.dart  custom_chart_service.dart  dasha_system.dart  divisional_charts.dart  gowri_panchanga_service.dart  horary_service.dart  jaimini_service.dart  kp_chart_service.dart  kp_extensions.dart  life_prediction_service.dart  masa_service.dart  nadi_service.dart  panchang_service.dart  pdf_report_generator.dart  planetary_aspect_service.dart  planetary_maitri_service.dart  progeny_service.dart  rashiphal_service.dart  retrograde_analysis.dart  shadbala.dart  transit_analysis.dart  varshaphal_system.dart  yoga_dosha_analyzer.dart
lib/ui/: chart_screen.dart  home_screen.dart  input_screen.dart  panchang_screen.dart  (+2 more)
scripts/: setup_swisseph.ps1
test/: app_environment_test.dart  astronomy_fixes_test.dart  ayanamsa_test.dart  chart_customization_test.dart  feature_verification_test.dart  migration_verification_test.dart  models_extended_test.dart  models_test.dart  panchang_verification_test.dart  sanity_test.dart  widget_test.dart  yoga_dosha_bhanga_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  installer.iss
(+43 files in other folders)
